Fixed responsive, dark mode available

--- a/public/css/about_me.css
+++ b/public/css/about_me.css
@@ -103,6 +103,7 @@
 }
 
 .message-container .message-content-container{
+    line-height: 2em;
     font-family: Nunito-Regular;
     font-size: 18px;
     color: #363636;
@@ -235,7 +236,8 @@ body.dark-mode .me-card .center,
 body.dark-mode .message-container .message-title,
 body.dark-mode .band-name,
 body.dark-mode .band-message,
-body.dark-mode .me-game .me-game-name{
+body.dark-mode .me-game .me-game-name,
+body.dark-mode .message-container .message-content-container{
     color: #E6EBF0;
 }
 
