--- a/public/css/reading_article.css
+++ b/public/css/reading_article.css
@@ -206,6 +206,74 @@
              -10px -10px 20px #ffffff;
 }
 
+.lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid #455478;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+  
+  @keyframes lds-ripple {
+    0% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
+  }
+  
+
+@media only screen and (max-width: 576px){
+    .article-title{
+        font-size: 18px;
+    } 
+    
+    .article-info{
+        font-size: 16px;
+    }
+    
+    .article-content{
+        font: 18px;
+    }
+
+    .music-container .music-name{
+        font-size: 18px;
+    }
+
+    #share-btn{
+        width: 130px;
+        height: 30px;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+
+    #show-project-btn{
+        width: 130px;
+        height: 30px;
+        border-radius: 5px;
+        font-size: 16px;
+        padding-top: 0;
+    }
+}
+
 /*Dark mode*/
 body.dark-mode .article-cover{
     background: #1A1D21;
@@ -267,4 +335,8 @@ body.dark-mode #share-btn{
     border: 0;
     box-shadow: none;
     border: 1px solid #292D33;
+}
+
+body.dark-mode .lds-ripple div{
+    border-color: #fff;
 }
